# dir_sync

./: .gitignore  CMakeLists.txt  README.md
documentation/: Makefile  documentation.tex
documentation/images/: protobufs.xml
include/: constants.h  networking.h  shared.h
protos/: dir_sync.proto
src/: networking.cpp  shared.cpp
src/dir_sync_client/: main.cpp
src/dir_sync_server/: main.cpp
